tests/paczka1/fuzzy1/36981389.err
Error in line 2: irlzIrHIg S568 6,9
Error in line 8: jXt S120 64,0
Error in line 10: LZpyc0d S568 3,9
Error in line 15: jXt S568 0,0
Error in line 22: jXt A551 4,8
Error in line 26: jXt S120 45,7
Error in line 28: LZpyc0d A551 4,7
